fix visibility

--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,7 @@ li {
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-  visibility: visible;
+  visibility: hidden;
 }
 
 .backdrop {
@@ -426,7 +426,7 @@ li {
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1)  ;
 }
 
 .backdrop.is-hidden .modal-window {
@@ -629,7 +629,6 @@ li {
   background: var(--primary-white-color);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  /* ------------ LAYOUT ---------------  */
   width: 270px;
 
   border-radius: 0px 0px 4px 4px;
